libs/mynewt_rust/include/mynewt_rust/json_helper.h

//! Helper Functions for Mynewt JSON Encoding API

///  Assume we are writing an object now.  Write the key name and start a child array.
///  ```
///  {a:b --> {a:b, key:[
///  ```
void json_helper_set_array(void *object, const char *key);
///  End the child array and resume writing the parent object.
///  ```
///  {a:b, key:[... --> {a:b, key:[...]
///  ```
void json_helper_close_array(void *object, const char *key);
///  Assume we have called set_array.  Start an array item, assumed to be an object.
///  ```
///  [... --> [...,
///  ```
void json_helper_object_array_start_item(const char *key);
///  End an array item, assumed to be an object.
///  ```
///  [... --> [...,
///  ```
void json_helper_object_array_end_item(const char *key) ;
///  Encode an int value into the current JSON encoding value `coap_json_value`
void json_helper_set_int(void *object, const char *key, uint64_t value);
///  Encode an unsigned int value into the current JSON encoding value `coap_json_value`
void json_helper_set_uint(void *object, const char *key, uint64_t value);
///  Encode a float value into the current JSON encoding value `coap_json_value`
void json_helper_set_float(void *object, const char *key, float value);
///  Encode a text value into the current JSON encoding value `coap_json_value`
void json_helper_set_text_string(void *object, const char *key, const char *value);