libs/mynewt_rust/include/mynewt_rust/sensor_helper.h

//! Helper Functions for Mynewt Sensor API

struct os_dev;
struct sensor;
struct sensor_temp_data;
///  Interpret `sensor_data` as a `sensor_temp_raw_data` struct that contains raw temp.
///  Copy the sensor data into `dest`.  Return 0 if successful.
int get_temp_raw_data(void *sensor_data, struct sensor_temp_raw_data *dest);
///  Interpret `sensor_data` as a `sensor_temp_data` struct that contains computed temp.
///  Copy the sensor data into `dest`.  Return 0 if successful.
int get_temp_data(void *sensor_data, struct sensor_temp_data *dest);
///  Return the Mynewt device for the Mynewt sensor.
struct os_dev *sensor_get_device(struct sensor *s);
///  Return the name for the Mynewt device.  Assumes name is non-null.
const char *device_get_name(struct os_dev *device);
///  Return the NULL sensor.
struct sensor *null_sensor(void);
///  Return non-zero if sensor is NULL.
int is_null_sensor(struct sensor *p);
///  Return non-zero if sensor data is NULL.
int is_null_sensor_data(void *p);