src/mynewt/libs/mynewt_rust.rs

impl Default for sensor_type_traits__bindgen_ty_1 {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[doc = " Read a single value from a sensor, given a specific sensor type"]
#[doc = " (e.g. SENSOR_TYPE_PROXIMITY)."]
#[doc = ""]
#[doc = " - __`sensor`__: The sensor to read from"]
#[doc = " - __`type`__: The type(s) of sensor values to read.  Mask containing that type, provide"]
#[doc = "        all, to get all values."]
#[doc = " - __`data_func`__: The function to call with each value read.  If NULL, it calls all"]
#[doc = "        sensor listeners associated with this function."]
#[doc = " - __`arg`__: The argument to pass to the read callback."]
#[doc = " - __`timeout`__: Timeout. If block until result, specify OS_TIMEOUT_NEVER, 0 returns"]
#[doc = "        immediately (no wait.)"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_read_func_t = ::core::option::Option<
    unsafe extern "C" fn(
        arg1: *mut sensor,
        arg2: sensor_type_t,
        arg3: sensor_data_func_t,
        arg4: *mut ::cty::c_void,
        arg5: u32,
    ) -> ::cty::c_int,
>;
#[doc = " Get the configuration of the sensor for the sensor type.  This includes"]
#[doc = " the value type of the sensor."]
#[doc = ""]
#[doc = " - __`sensor`__: Ptr to the sensor"]
#[doc = " - __`type`__: The type of sensor value to get configuration for"]
#[doc = " - __`cfg`__: A pointer to the sensor value to place the returned result into."]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_get_config_func_t = ::core::option::Option<
    unsafe extern "C" fn(
        arg1: *mut sensor,
        arg2: sensor_type_t,
        arg3: *mut sensor_cfg,
    ) -> ::cty::c_int,
>;
#[doc = " Send a new configuration register set to the sensor."]
#[doc = ""]
#[doc = " - __`sensor`__: Ptr to the sensor-specific stucture"]
#[doc = " - __`arg`__: Ptr to the sensor-specific configuration structure"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_set_config_func_t = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut sensor, arg2: *mut ::cty::c_void) -> ::cty::c_int,
>;
#[doc = " Set the trigger and threshold values for a specific sensor for the sensor"]
#[doc = " type."]
#[doc = ""]
#[doc = " - __`sensor`__: Ptr to the sensor"]
#[doc = " - __`type`__: type of sensor"]
#[doc = " - __`stt`__: Ptr to teh sensor traits"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_set_trigger_thresh_t = ::core::option::Option<
    unsafe extern "C" fn(
        arg1: *mut sensor,
        arg2: sensor_type_t,
        stt: *mut sensor_type_traits,
    ) -> ::cty::c_int,
>;
#[doc = " Clear the high/low threshold values for a specific sensor for the sensor"]
#[doc = " type."]
#[doc = ""]
#[doc = " - __`sensor`__: Ptr to the sensor"]
#[doc = " - __`type`__: Type of sensor"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_clear_trigger_thresh_t = ::core::option::Option<
    unsafe extern "C" fn(sensor: *mut sensor, type_: sensor_type_t) -> ::cty::c_int,
>;
#[doc = " Set the notification expectation for a targeted set of events for the"]
#[doc = " specific sensor. After this function returns successfully, the implementer"]
#[doc = " shall post corresponding event notifications to the sensor manager."]
#[doc = ""]
#[doc = " - __`sensor`__: The sensor to expect notifications from."]
#[doc = " - __`event`__: The mask of event types to expect notifications from."]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_set_notification_t = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut sensor, arg2: sensor_event_type_t) -> ::cty::c_int,
>;
#[doc = " Unset the notification expectation for a targeted set of events for the"]
#[doc = " specific sensor."]
#[doc = ""]
#[doc = " - __`sensor`__: The sensor."]
#[doc = " - __`event`__: The mask of event types."]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_unset_notification_t = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut sensor, arg2: sensor_event_type_t) -> ::cty::c_int,
>;
#[doc = " Let driver handle interrupt in the sensor context"]
#[doc = ""]
#[doc = " - __`sensor`__: Ptr to the sensor"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_handle_interrupt_t =
    ::core::option::Option<unsafe extern "C" fn(sensor: *mut sensor) -> ::cty::c_int>;
#[doc = " Reset Sensor function Ptr"]
#[doc = ""]
#[doc = " - __`Ptr`__: to the sensor"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero on failure"]
pub type sensor_reset_t =
    ::core::option::Option<unsafe extern "C" fn(arg1: *mut sensor) -> ::cty::c_int>;
#[repr(C)]
pub struct sensor__bindgen_ty_1 {
    pub slh_first: *mut sensor_listener,
}
impl Default for sensor__bindgen_ty_1 {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct sensor__bindgen_ty_2 {
    pub slh_first: *mut sensor_notifier,
}
impl Default for sensor__bindgen_ty_2 {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct sensor__bindgen_ty_3 {
    pub slh_first: *mut sensor_type_traits,
}
impl Default for sensor__bindgen_ty_3 {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct sensor__bindgen_ty_4 {
    pub sle_next: *mut sensor,
}
impl Default for sensor__bindgen_ty_4 {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[doc = "  Represents a single temperature sensor raw value"]
#[repr(C, packed)]
#[derive(Default)]
pub struct sensor_temp_raw_data {
    #[doc = "  Raw temp from STM32 Internal Temp Sensor is 0 to 4095"]
    pub strd_temp_raw: u32,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
}
impl sensor_temp_raw_data {
    #[inline]
    pub fn strd_temp_raw_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_strd_temp_raw_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(strd_temp_raw_is_valid: u8) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let strd_temp_raw_is_valid: u8 =
                unsafe { ::core::mem::transmute(strd_temp_raw_is_valid) };
            strd_temp_raw_is_valid as u64
        });
        __bindgen_bitfield_unit
    }
}
extern "C" {
    #[doc = "  Interpret `sensor_data` as a `sensor_temp_raw_data` struct that contains raw temp."]
    #[doc = "  Copy the sensor data into `dest`.  Return 0 if successful."]
    pub fn get_temp_raw_data(
        sensor_data: *mut ::cty::c_void,
        dest: *mut sensor_temp_raw_data,
    ) -> ::cty::c_int;
}
extern "C" {
    #[doc = "  Interpret `sensor_data` as a `sensor_temp_data` struct that contains computed temp."]
    #[doc = "  Copy the sensor data into `dest`.  Return 0 if successful."]
    pub fn get_temp_data(
        sensor_data: *mut ::cty::c_void,
        dest: *mut sensor_temp_data,
    ) -> ::cty::c_int;
}
extern "C" {
    #[doc = "  Return the Mynewt device for the Mynewt sensor."]
    pub fn sensor_get_device(s: *mut sensor) -> *mut os_dev;
}
extern "C" {
    #[doc = "  Return the name for the Mynewt device.  Assumes name is non-null."]
    pub fn device_get_name(device: *mut os_dev) -> *const ::cty::c_char;
}
extern "C" {
    #[doc = "  Return the NULL sensor."]
    pub fn null_sensor() -> *mut sensor;
}
extern "C" {
    #[doc = "  Return non-zero if sensor is NULL."]
    pub fn is_null_sensor(p: *mut sensor) -> ::cty::c_int;
}
extern "C" {
    #[doc = "  Return non-zero if sensor data is NULL."]
    pub fn is_null_sensor_data(p: *mut ::cty::c_void) -> ::cty::c_int;
}
extern "C" {
    #[doc = "  Assume we are writing an object now.  Write the key name and start a child array."]
    #[doc = "  ```"]
    #[doc = "  {a:b --> {a:b, key:["]
    #[doc = "  ```"]
    pub fn json_helper_set_array(object: *mut ::cty::c_void, key: *const ::cty::c_char);
}
extern "C" {
    #[doc = "  End the child array and resume writing the parent object."]
    #[doc = "  ```"]
    #[doc = "  {a:b, key:[... --> {a:b, key:[...]"]
    #[doc = "  ```"]
    pub fn json_helper_close_array(object: *mut ::cty::c_void, key: *const ::cty::c_char);
}
extern "C" {
    #[doc = "  Assume we have called set_array.  Start an array item, assumed to be an object."]
    #[doc = "  ```"]
    #[doc = "  [... --> [...,"]
    #[doc = "  ```"]
    pub fn json_helper_object_array_start_item(key: *const ::cty::c_char);
}
extern "C" {
    #[doc = "  End an array item, assumed to be an object."]
    #[doc = "  ```"]
    #[doc = "  [... --> [...,"]
    #[doc = "  ```"]
    pub fn json_helper_object_array_end_item(key: *const ::cty::c_char);
}
extern "C" {
    #[doc = "  Encode an int value into the current JSON encoding value `coap_json_value`"]
    pub fn json_helper_set_int(object: *mut ::cty::c_void, key: *const ::cty::c_char, value: u64);
}
extern "C" {
    #[doc = "  Encode an unsigned int value into the current JSON encoding value `coap_json_value`"]
    pub fn json_helper_set_uint(object: *mut ::cty::c_void, key: *const ::cty::c_char, value: u64);
}
extern "C" {
    #[doc = "  Encode a float value into the current JSON encoding value `coap_json_value`"]
    pub fn json_helper_set_float(object: *mut ::cty::c_void, key: *const ::cty::c_char, value: f32);
}
extern "C" {
    #[doc = "  Encode a text value into the current JSON encoding value `coap_json_value`"]
    pub fn json_helper_set_text_string(
        object: *mut ::cty::c_void,
        key: *const ::cty::c_char,
        value: *const ::cty::c_char,
    );
}
